[package]
name = "poetry-wall"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
image = "0.21.1"
palette = "0.4.1"
rusttype = "0.7.6"

[dev-dependencies]
assert_cmd = "0.11.1"
assert_fs = "0.11.3"
predicates = "1.0.1"
spectral = "0.6.0"